CHANGELOG

>>VERSION 17.7.3
+ Added full Polish edition (lore, speech, names, quests: prod. Axel)
* Updated font pack, now with support of extended Latin & Cyrillic alphabets.
* Fixed bug with road near Bronze Gate & Sarsfield
* Fixed bug with towers quantity near "Three Towers" waypoint
* Fixed bug with waypoint cooldown

>>VERSION 17.7.2
+ Greatly improved Polish translation (prod. Axel Snow)
* Improved 2nd Tyrosh male skin
* Rebalanced Joffrey's Crossbow
* Fixed bug with Essos & Dorne fort walls upon the road
* Fixed bug with Wyl & Hayford road
* Fixed bug with Beric Dayne spawning
* Fixed bug with chance of double Beric Dondarrion's drop
* Fixed bug with hillmen villages
* Fixed bug with crash caused by rhino riders
* Fixed bug with Mossovy Forts & Villages
* Fixed bug with desert scorpions instead of jungle scorpions spawning in tropical forests
* Fixed potential bugs, caused by "legendary" mercenaries
* Returned black roofs to the Dorne

>>VERSION 17.7.1
* Improved ukrainian translation (prod. DDPAT Knife Series)
* Fixed bug with anvil texture
* Fixed bug with agressive mobs AI

>>VERSION 17.7
* Greatly improved the Ice Wall and the Yi Ti Wall
* Greatly improved all the banners in the game (prod. Hummel009)
+ Added ruined wall castles
+ Added fixed castles in mountain biomes
+ Added Asshai Shield
+ Added feminized ranks
+ Added a config option for maximum fellowship size
+ Added a config option to tune how often the mod clears the playerdata cache for offline players' data
+ Added new fixed locations, ruines in general. Now 99% of waypoints have fixed structure.
+ Added not-legendary longsword and greatsword
+ Added config for snowy leaves

* Improved sword textures
* Improved seasonal-based plants in biomes
* Improved Craster's Barn and wifes' spawning
* Improved Craster skin
* Improved Samwell Tarly skin
* Improved Ghiscar Pit
* Improved village spawning
* Improved Petyr Baelish's brothel and Tobho Mott's smithy
* Improved Red Castle